// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneField should have the expected markup in the DOM with custom settings 1`] = `
.c1 {
  display: inline-block;
  position: relative;
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  display: block;
  position: relative;
  width: 100%;
  padding: 0 0 0 16px;
  box-sizing: border-box;
  color: #054752;
  background-color: #EDEDED;
  border-radius: 16px;
  border: solid 1px #EDEDED;
  box-shadow: none;
}

.c0 select {
  display: block;
  position: relative;
  width: 100%;
  height: 52px;
  margin: 0;
  padding: 0 calc(8px + 24px) 0 0;
  font-size: 16px;
  line-height: 20px;
  color: #054752;
  box-shadow: none;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  box-shadow: none;
  border: none;
  cursor: pointer;
  z-index: 1;
}

.c0 select::-ms-expand {
  display: none;
}

.c0 select:focus {
  outline: none;
}

.c0 .kirk-icon {
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;
  right: 8px;
  background: #EDEDED;
  z-index: 0;
}

.c0 .kirk-selectField--hasFocus {
  border: 3px solid #00AFF5;
}

.c0 .kirk-selectField--hasFocus select {
  height: calc(52px - 1px - 3px);
}

<div
  className="kirk-phoneField"
>
  <div
    aria-labelledby="labelId"
    className="kirk-phoneField-wrapper customClass"
    id="selectFieldName"
  >
    <div
      className="kirk-selectField c0"
    >
      <select
        aria-label="Phone Country code"
        autoFocus={true}
        defaultValue="ES"
        name="phoneRegion"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
      >
        <option
          value="ES"
        >
          Custom es label +34
        </option>
        <option
          value="FR"
        >
          Custom fr label +33
        </option>
      </select>
      <svg
        aria-hidden={true}
        className="kirk-icon c1"
        fill="#708C91"
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <polyline
          fill="none"
          points="9 18 15 12 9 6"
          stroke="#708C91"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeMiterlimit="10"
          strokeWidth="2"
          transform="rotate(90 12 12)"
        />
      </svg>
    </div>
    <div
      className="jsx-2044813569 kirk-textField"
    >
      <div
        className="jsx-2044813569 kirk-textField-wrapper"
      >
        <input
          className="jsx-2044813569 "
          name="phoneNumber"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Phone number"
          title="Phone Number"
          type="tel"
          value="0765455667"
        />
        <button
          aria-hidden={true}
          className="kirk-button kirk-button-unstyled kirk-button-bubble kirk-textField-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          tabIndex="-1"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="kirk-icon c1"
            fill="#708C91"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            
            <path
              d="M19 5L5 19M19 19L5 5"
              fill="none"
              stroke="#708C91"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeMiterlimit="10"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneField should have the expected markup in the DOM with default settings 1`] = `
.c1 {
  display: inline-block;
  position: relative;
}

.c1 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.c0 {
  display: block;
  position: relative;
  width: 100%;
  padding: 0 0 0 16px;
  box-sizing: border-box;
  color: #054752;
  background-color: #EDEDED;
  border-radius: 16px;
  border: solid 1px #EDEDED;
  box-shadow: none;
}

.c0 select {
  display: block;
  position: relative;
  width: 100%;
  height: 52px;
  margin: 0;
  padding: 0 calc(8px + 24px) 0 0;
  font-size: 16px;
  line-height: 20px;
  color: #054752;
  box-shadow: none;
  background: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  box-shadow: none;
  border: none;
  cursor: pointer;
  z-index: 1;
}

.c0 select::-ms-expand {
  display: none;
}

.c0 select:focus {
  outline: none;
}

.c0 .kirk-icon {
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;
  right: 8px;
  background: #EDEDED;
  z-index: 0;
}

.c0 .kirk-selectField--hasFocus {
  border: 3px solid #00AFF5;
}

.c0 .kirk-selectField--hasFocus select {
  height: calc(52px - 1px - 3px);
}

<div
  className="kirk-phoneField"
>
  <div
    className="kirk-phoneField-wrapper--inline"
  >
    <div
      className="kirk-selectField c0"
    >
      <select
        defaultValue=""
        name="phoneRegion"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
      >
        <option
          value="FR"
        >
          France +33
        </option>
        <option
          value="ES"
        >
          Spain (España) +34
        </option>
      </select>
      <svg
        aria-hidden={true}
        className="kirk-icon c1"
        fill="#708C91"
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <polyline
          fill="none"
          points="9 18 15 12 9 6"
          stroke="#708C91"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeMiterlimit="10"
          strokeWidth="2"
          transform="rotate(90 12 12)"
        />
      </svg>
    </div>
    <div
      className="jsx-2044813569 kirk-textField"
    >
      <div
        className="jsx-2044813569 kirk-textField-wrapper"
      >
        <input
          className="jsx-2044813569 "
          name="phoneNumber"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="tel"
          value=""
        />
        
      </div>
    </div>
  </div>
</div>
`;
